--- a/src/app/confirmar-email/confirmar-email.page.scss
+++ b/src/app/confirmar-email/confirmar-email.page.scss
@@ -110,7 +110,9 @@ h3{
   line-height: 1.5;
   margin-bottom: 10%;
 }
-
+.reSendMail{
+  color: red;
+}
 /*============================================================================================================*/
 
 code-input{
