--- a/src/app/tabs/tab5/tab5.page.html
+++ b/src/app/tabs/tab5/tab5.page.html
@@ -2,24 +2,20 @@
   <ion-list >
     <ion-item id="titulo" *ngIf="this.search.cacheSearch.length>0">
       <ion-label>Pesquisado recentemente</ion-label>
-        <ion-button (click)="limparHistorico()">
+        <ion-button (click)="clearCache()">
           <ion-icon name="close-circle" slot="icon-only" color="danger"></ion-icon>
         </ion-button>
     </ion-item>
-    
-    <ion-item-sliding side="end" (click)="Search(op)" *ngFor="let op of this.search.cacheSearch">
-      <ion-item-options>
-        <ion-item-option color="danger" (click)="excluir(op)">
-          <ion-icon name="trash-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-      <ion-item>
+      
+      <ion-item class="cache" (click)="Search(op)" *ngFor="let op of this.search.cacheSearch; let last = last" >
+        <ng-container *ngIf="last">
+          {{setGesture()}}
+        </ng-container>
         <ion-label>
           {{op}}
         </ion-label>
         <ion-icon name="open-outline"></ion-icon>
       </ion-item>
-    </ion-item-sliding>
 
   </ion-list>
 </ion-content>
