--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,11 +7,11 @@
 
     <ion-title class="mainTitle" *ngIf='selectedTab == "tab1" || selectedTab =="tab2"'>travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
 
-    <ion-title *ngIf='selectedTab == "tab3"' id="postTitle">
+    <ion-title *ngIf='selectedTab == "tab3"' id="postTitle" >
       Criar post
     </ion-title>
 
-    <ion-chip *ngIf='selectedTab == "tab3"' slot="end">
+    <ion-chip *ngIf='selectedTab == "tab3"' slot="end" (click)="postThread()">
       <ion-label>Postar</ion-label>
     </ion-chip>
 
