--- a/src/global.scss
+++ b/src/global.scss
@@ -27,7 +27,7 @@
 
 .customAlert .alert-wrapper {
   border-radius: 10px;
-  text-align: center;
+  text-align: left;
   font-family: 'Segoe UI';
   height: 200px;
 }
