Tela de ultimo-passo finalizada

--- a/src/app/ultimo-passo/ultimo-passo.page.scss
+++ b/src/app/ultimo-passo/ultimo-passo.page.scss
@@ -141,6 +141,7 @@ ion-chip{
 
 .estadoClicked{
   border: 1px solid var(--ion-color-dark);
+  filter:brightness(90%);
 }
 
 /*============================================================================================================*/
