--- a/src/app/tabs/tab3/tab3.page.html
+++ b/src/app/tabs/tab3/tab3.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <form >
+  <form [formGroup]="postForm">
     <ion-list lines="full">
       <ion-item>
         <ion-label position="floating">Título da postagem</ion-label>
