--- a/src/app/tabs/tab3/tab3.page.scss
+++ b/src/app/tabs/tab3/tab3.page.scss
@@ -50,7 +50,31 @@ ion-item{
   --padding-top: 2px;
   
 }
+ion-chip{
+  padding: 0px 16px 0px 16px;
+  --background: none;
+  border: 1px solid var(--ion-color-medium);
+  height: 24px;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  transition: all .3s linear ;
+}
 
+.selected{
+  --background: #00f9bb;
+  border: none;
+  color: white;
+}
+.city{
+  --background: #00f9bb;
+  border:none;
+}
+.citySelected{
+  --background: #00f9bb;
+}
 .divPosts{
   display: flex;
   align-items: center;
@@ -58,14 +82,7 @@ ion-item{
   padding: 0px 12px 0px 12px;
   margin-top: 4px;
 
-  ion-chip{
-    padding: 0px 16px 0px 16px;
-    --background: none;
-    border: 1px solid var(--ion-color-medium);
-    height: 24px;
-    font-size: 12px;
-  }
-
+ 
   ion-icon{
     font-size: 20px;
   }
